--- a/public/form.html
+++ b/public/form.html
@@ -1,10 +1,10 @@
 
 <html>
 <body>
-    <div>
-        Create an user by filling out the field belows
+    <div class = "main" style = "text-align: center; color:rgb(173, 96, 96); font-weight:bold">
+        Create an user by filling out the field belows      
         <hr/>
-        <form action = "/user_create" method = "POST">
+        <form action = "/user_create" method = "POST" style = "text-align: center" >
             <input placeholder = "User Name" name = "create_user_name"/>
             <input placeholder="User Password" name = "create_user_password"/>
             <input placeholder ="Email Name" name = "create_user_email"/>
@@ -13,3 +13,18 @@
     </div>
 </body>
 </html>
+
+
+.main{
+    text-align: center;
+    background-color: #fff;
+    border-radius: 20px;
+    width: 300px;
+    height: 350px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
